--- a/src/app/recon-result/recon-result.component.css
+++ b/src/app/recon-result/recon-result.component.css
@@ -1,3 +1,7 @@
+.section {
+    overflow: hidden;
+}
+
 .table-controls {
     display: flex;
     flex-wrap: inherit;
