--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+body {
+    background-color: #a7f0ce;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
